--- a/site/src/index.njk
+++ b/site/src/index.njk
@@ -3,10 +3,8 @@ layout: base.njk
 title: Example
 ---
 
-<h1 class="section-title">Welcome to my website!</h1>
-
 <section id="featured-articles" class="featured-articles">
-  <div class="container flow">
-    <h2 class="section-title text-center ">Featured articles</h2>
+  <div class="container text-center">
+    <h1 class="title">Unreal Engine 5 cheat sheet</h1>
   </div>
 </section>
