--- a/site/src/style/abstracts/_utility.scss
+++ b/site/src/style/abstracts/_utility.scss
@@ -1,3 +1,91 @@
+@use './variables' as *;
+
 /* //////////////////////
   Utility Classes
   /////////////////////// */
+
+.text-center {
+    text-align: center;
+}
+
+// MARGIN
+.mt-0 { margin-top: 0;}
+.ml-0 { margin-left: 0;}
+.mr-0 { margin-right: 0;}
+.mb-0 { margin-bottom: 0;}
+.m-0 { margin: 0;}
+
+.mt-1 { margin-top: 0.5rem;}
+.mt-2 { margin-top: 1rem;}
+.mt-3 { margin-top: 1.5rem;}
+.mt-4 { margin-top: 2rem;}
+.mt-5 { margin-top: 4rem;}
+
+.ml-1 { margin-left: 0.5rem;}
+.ml-2 { margin-left: 1rem;}
+.ml-3 { margin-left: 1.5rem;}
+.ml-4 { margin-left: 2rem;}
+.ml-5 { margin-left: 4rem;}
+
+.mr-1 { margin-right: 0.5rem;}
+.mr-2 { margin-right: 1rem;}
+.mr-3 { margin-right: 1.5rem;}
+.mr-4 { margin-right: 2rem;}
+.mr-5 { margin-right: 4rem;}
+
+.mb-1 { margin-bottom: 0.5rem;}
+.mb-2 { margin-bottom: 1rem;}
+.mb-3 { margin-bottom: 1.5rem;}
+.mb-4 { margin-bottom: 2rem;}
+.mb-5 { margin-bottom: 4rem;}
+
+// PADDING
+.pt-0 { padding-top: 0;}
+.pl-0 { padding-left: 0;}
+.pr-0 { padding-right: 0;}
+.pb-0 { padding-bottom: 0;}
+.p-0 { padding: 0;}
+
+.pt-1 { padding-top: 0.5rem;}
+.pt-2 { padding-top: 1rem;}
+.pt-3 { padding-top: 1.5rem;}
+.pt-4 { padding-top: 2rem;}
+.pt-5 { padding-top: 4rem;}
+
+.pl-1 { padding-left: 0.5rem;}
+.pl-2 { padding-left: 1rem;}
+.pl-3 { padding-left: 1.5rem;}
+.pl-4 { padding-left: 2rem;}
+.pl-5 { padding-left: 4rem;}
+
+.pr-1 { padding-right: 0.5rem;}
+.pr-2 { padding-right: 1rem;}
+.pr-3 { padding-right: 1.5rem;}
+.pr-4 { padding-right: 2rem;}
+.pr-5 { padding-right: 4rem;}
+
+.pb-1 { padding-bottom: 0.5rem;}
+.pb-2 { padding-bottom: 1rem;}
+.pb-3 { padding-bottom: 1.5rem;}
+.pb-4 { padding-bottom: 2rem;}
+.pb-5 { padding-bottom: 4rem;}
+
+// COMPONENTS
+.btn {
+  font-family: $ff-heading;
+  border-radius: 5px;
+  padding: .5rem 1.2rem;
+  background: $purple;
+  color: $white;
+  border: none;
+  transition: background .3s ease-in-out;
+  cursor: pointer;
+
+  &:hover {
+    background: darken($purple, 4%);
+  }
+
+  &:active {
+    transform: translateY(2px);
+  }
+}
