--- a/site/src/style/sections/_header.scss
+++ b/site/src/style/sections/_header.scss
@@ -6,22 +6,28 @@
 
 .page-header {
   padding: 2em 0;
-
-  &__content {
-    display: flex;
-    justify-content: space-between;
-  }
-  
+  background: linear-gradient(90deg, $black-gradient);
+  text-align: center;
+  box-shadow: 0 9px 5px -7px rgba(0,0,0,.6);
+  border-bottom: solid 1px rgba(117,102,239,.5);
 }
 
 .nav-list {
   margin: 0;
   padding: 0;
   font-family: $ff-heading;
+  
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
 
   a {
-    color: $clr-primary;
+    color: $white;
     text-decoration: none;
+    
+    &:not(:last-child) {
+      margin-right: 1rem;
+    }
 
     &:focus,
     &:hover {
