--- a/site/src/style/style.scss
+++ b/site/src/style/style.scss
@@ -4,6 +4,7 @@
 @use 'base/reset';
 @use 'base/typography';
 @use 'base/base';
+@use 'base/layout';
 
 @use 'sections/header';
 @use 'sections/footer';
